--- a/nodesnim/nodescontrol/subwindow.html
+++ b/nodesnim/nodescontrol/subwindow.html
@@ -200,7 +200,7 @@ function main() {
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <a id="SubWindow,string"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#SubWindow%2Cstring"><span class="Identifier">SubWindow</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;SubWindow&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#SubWindow%2Cstring"><span class="Identifier">SubWindow</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;SubWindow&quot;</span><span class="Other">)</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Creates a new SubWindow.</p>
@@ -319,7 +319,7 @@ Opens the window. alias of show() method.
 
 </dd>
 <a id="setTitle.e,SubWindowRef,string"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setTitle.e%2CSubWindowRef%2Cstring"><span class="Identifier">setTitle</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">;</span> <span class="Identifier">title</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#setTitle.e%2CSubWindowRef%2Cstring"><span class="Identifier">setTitle</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="subwindow.html#SubWindowRef"><span class="Identifier">SubWindowRef</span></a><span class="Other">;</span> <span class="Identifier">title</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Changes subwindow title.</p>
@@ -339,7 +339,7 @@ Opens the window. alias of show() method.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-16 14:18:19 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-09-20 16:26:21 UTC</small>
       </div>
     </div>
   </div>
